# ontoloader

./: README.md  pyproject.toml  setup.cfg
src/ontoloader/: __init__.py  ontoloader.py
